# gemini-live-rs

./: AGENTS.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  publish.yml  release.yml
crates/gemini-live/: Cargo.toml
crates/gemini-live-cli/: Cargo.toml
crates/gemini-live-cli/src/: app.rs  audio_io.rs  desktop.rs  desktop_control.rs  input.rs  main.rs  media.rs  outbound.rs  profile.rs  render.rs  screen.rs  session.rs  slash.rs  startup.rs  tooling.rs  update.rs
crates/gemini-live-discord/: Cargo.toml  README.md
crates/gemini-live-discord/src/: config.rs  error.rs  gateway.rs  lib.rs  main.rs  policy.rs  service.rs  session.rs  setup.rs  voice.rs
crates/gemini-live-harness/: Cargo.toml  README.md
crates/gemini-live-harness/benches/: passive_notification.rs
crates/gemini-live-harness/src/: adapter.rs  bridge.rs  controller.rs  delivery.rs  error.rs  executor.rs  fs.rs  lib.rs  memory.rs  notification.rs  profile.rs  registry.rs  store.rs  task.rs
crates/gemini-live-io/: Cargo.toml
crates/gemini-live-io/src/: error.rs  lib.rs
crates/gemini-live-io/src/audio/: aec.rs  mic.rs  mod.rs  resample.rs  speaker.rs
crates/gemini-live-io/src/screen/: capture.rs  mod.rs  target.rs
crates/gemini-live-runtime/: Cargo.toml  README.md
crates/gemini-live-runtime/benches/: managed_runtime.rs
crates/gemini-live-runtime/src/: config.rs  driver.rs  error.rs  event.rs  lib.rs  managed.rs  memory.rs  runtime.rs  session_manager.rs  tool.rs
crates/gemini-live-tools/: Cargo.toml
crates/gemini-live-tools/src/: lib.rs  timer.rs  workspace.rs
crates/gemini-live/benches/: hot_path.rs
crates/gemini-live/src/: audio.rs  codec.rs  error.rs  lib.rs  session.rs  transport.rs
crates/gemini-live/src/transport/: vertex_auth.rs
crates/gemini-live/src/types/: client_message.rs  common.rs  config.rs  mod.rs  server_message.rs
docs/: cli.md  design.md  protocol.md  roadmap.md  runtime-sequence.md  testing.md
