[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/jacoblincool/gemini-live-rs"

[workspace.dependencies]
gemini-live = { path = "crates/gemini-live" }

tokio = { version = "1.51", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json"] }
url = "2.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
