[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/jacoblincool/gemini-live-rs"

[workspace.dependencies]
gemini-live = { path = "crates/gemini-live", version = "0.1.7" }
gemini-live-harness = { path = "crates/gemini-live-harness", version = "0.1.7" }
gemini-live-io = { path = "crates/gemini-live-io", version = "0.1.7" }
gemini-live-runtime = { path = "crates/gemini-live-runtime", version = "0.1.7" }
gemini-live-tools = { path = "crates/gemini-live-tools", version = "0.1.7" }

tokio = { version = "1.51", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"], default-features = false }
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json"] }
url = "2.5"
google-cloud-auth = { version = "1.8.0", default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
