[package]
name = "gemini-live-cli"
version = "0.1.0"
description = "CLI tool for Gemini Live API"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gemini-live = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true }
hound = "3.5"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
cpal = "0.15"
