[package]
name = "gemini-live-cli"
version = "0.1.7"
description = "CLI tool for Gemini Live API"
readme = "../../README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["mic", "speak", "share-screen"]
mic = ["gemini-live-io/mic", "gemini-live-io/aec"]
speak = ["gemini-live-io/speaker", "gemini-live-io/aec"]
share-screen = ["gemini-live-io/screen"]
vertex-auth = ["gemini-live/vertex-auth"]

[dependencies]
gemini-live = { workspace = true }
gemini-live-io = { workspace = true }
gemini-live-runtime = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
clap = { version = "4.6", features = ["derive"] }
shlex = "1.3"
toml = "0.8"
tui-textarea = "0.7"
hound = "3.5"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

[[bin]]
name = "gemini-live"
path = "src/main.rs"
