[package]
name = "gemini-live-harness"
version = "0.1.8"
description = "Durable file-backed harness state and tools for Gemini Live hosts"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gemini-live = { workspace = true }
gemini-live-runtime = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "passive_notification"
harness = false
