[package]
name = "gemini-live-runtime"
version = "0.1.8"
description = "Reusable runtime orchestration for Gemini Live applications"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gemini-live = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
