[package]
name = "gemini-live"
version = "0.1.1"
description = "High-performance Rust client for the Gemini Multimodal Live API"
readme = "../../README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
