[package]
name = "gemini-live"
version = "0.1.6"
description = "High-performance Rust client for the Gemini Multimodal Live API"
readme = "../../README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
vertex-auth = ["dep:google-cloud-auth"]

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
google-cloud-auth = { workspace = true, optional = true }

serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

rustls = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "hot_path"
harness = false
